--- a/app/stylesheets/g_base.sass
+++ b/app/stylesheets/g_base.sass
@@ -9,9 +9,12 @@
 @import base/#left-side.sass
 @import base/#right-side.sass
 
-@import blue/components.scss
 
 // ----------utility (or .class) based stylesheets.
+@import bootstrap_parts
+
+@import blue/main
+
 // @import utilities.sass
 // @import pagination.sass
 // @import buttons.sass 
