--- a/app/stylesheets/_bootstrap_overrides.scss
+++ b/app/stylesheets/_bootstrap_overrides.scss
@@ -1,3 +1,5 @@
+// Instructure's bootstrap mods:
+
 // make links in .alert be same color as alert text but bold
 .alert a {
   font-weight: bold;
@@ -6,9 +8,5 @@
 
 .nav-tabs.nav-stacked {
   background: $lightBackground;
-}
-
-h1, h2, h3 {
-  color: $gray;
 }
 
