--- a/app/views/calendars/show2.html.erb
+++ b/app/views/calendars/show2.html.erb
@@ -10,6 +10,7 @@
   js_bundle :calendar2
   jammit_css :calendar2
   add_crumb t('crumbs.my_calendar', "My Calendar"), calendar_url
+  @body_classes << "full-width"
 %>
 
 <% content_for :auto_discovery do %>
