--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
 
 -%>
 <% content_for :head do %>
-  <%= include_common_stylesheet %>
+  <%= include_stylesheets :common, :media => "all" %>
   <% if @eportfolio_view === true %>
     <%= stylesheet_link_tag "compiled/instructure_eportfolio.css" %>
   <% end %>
