pull in more of the parts of bootstrap that we want
Change-Id: I7559d4e5dd5e358cdd1e8ea9d1872dd59971b3c5

--- a/app/stylesheets/_bootstrap_parts.scss
+++ b/app/stylesheets/_bootstrap_parts.scss
@@ -6,6 +6,12 @@
 @import "bootstrap/variables";
 @import "bootstrap/mixins";
 
+// Grid system and page structure
+@include gridFluid($fluidGridColumnWidth, $fluidGridGutterWidth);
+
+// Base CSS
+@import "bootstrap/forms";
+
 // Components: common
 @import "bootstrap/close";
 @import "bootstrap/wells";
@@ -14,5 +20,13 @@
 @import "bootstrap/buttons";
 @import "bootstrap/button-groups";
 @import "bootstrap/alerts"; // Note: alerts share common CSS with buttons and thus have styles in buttons.less
+
+// Components: Nav
+@import "bootstrap/navs"; // look at nav links on styleguide and on dashboard
+
+// Components: Popovers
+//@import "bootstrap/tooltip"; //want
+//@import "bootstrap/popovers"; //want
+
 
 @import "bootstrap_overrides";
