--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,7 +6,7 @@
   }
 %>
 <% content_for :head do %>
-  <%= include_common_stylesheet %>
+  <%= include_stylesheets :common, :media => "all" %>
 <% end %>
 
 <div id="registration_header">
