fix dashboard toggle and a couple style regressions
Change-Id: I47ab5610df59ec192c7296875ec1df74691ac789

--- a/app/stylesheets/g_instructure.sass
+++ b/app/stylesheets/g_instructure.sass
@@ -1436,7 +1436,7 @@ form.user_content_post_form
   cursor: pointer
 
 .dashboard-toggle
-  float: right
-  margin: 10px 0 0
+  display: block
+  padding: 10px 0 0
 #breadcrumbs .dashboard-toggle
   margin: 4px 0
