--- a/app/stylesheets/registration.scss
+++ b/app/stylesheets/registration.scss
@@ -1,5 +1,4 @@
-@import 'blue/variables';
-@import 'blue/mixins';
+@import 'environment';
 
 body {
   background: #fff url(/images/registration/blue-tile.png) 0 0 repeat;
