give people access to bootstrap style forms, see styleguide
Change-Id: Ie2ef0505597d754b13f6a249ebe73c46b61d4b42

--- a/app/stylesheets/bootstrap_parts/_main.scss
+++ b/app/stylesheets/bootstrap_parts/_main.scss
@@ -1,13 +1,13 @@
 //add variable modifications to the global _variables.sass
 //they will override bootstrap styles
-@import 'environment.sass';
+@import 'environment';
 
 
 // Grid system and page structure
 @include gridFluid($fluidGridColumnWidth, $fluidGridGutterWidth);
 
 // Base CSS
-@import "bootstrap/forms";
+@import "forms";
 
 // Components: common
 @import "bootstrap/close";
@@ -26,4 +26,4 @@
 //@import "bootstrap/popovers"; //want
 
 
-@import "bootstrap_overrides";
+@import "overrides";
