--- a/app/stylesheets/g_base.sass
+++ b/app/stylesheets/g_base.sass
@@ -11,7 +11,7 @@
 
 
 // ----------utility (or .class) based stylesheets.
-@import bootstrap_parts
+@import bootstrap_parts/main
 
 @import blue/main
 
