--- a/app/stylesheets/popup/main.scss
+++ b/app/stylesheets/popup/main.scss
@@ -2,7 +2,7 @@
 
 @import 'base/native';
 @import 'base/typography';
-@import "bootstrap_parts";
+@import "bootstrap_parts/main";
 
 @import "blue/main";
 
