make calendar2 look ok with new styles
Change-Id: I3144eb4804c599d0783e4d41a37d8a34291dad8c

--- a/app/stylesheets/mini_calendar.sass
+++ b/app/stylesheets/mini_calendar.sass
@@ -19,6 +19,12 @@ $kyle-blue: #0081e3
       font-weight: bold
       background-color: transparent
       margin: 0
+
+      //override default right side h2 styles
+      color: #fff
+      box-shadow: none
+      border-bottom: none
+
     .fc-button
       padding: 0px 10px
       font-size: 13px
