--- a/app/stylesheets/Calendar.sass
+++ b/app/stylesheets/Calendar.sass
@@ -1,11 +1,4 @@
-@import environment.sass
-//styles just to override default site styles, TODO remove when switched to kyle theme
-#right-side
-  background-color: #e6e7e9
-  box-shadow: none
-#breadcrumbs
-  box-shadow: none
-
+@import environment
 
 // This hides stuff till the javascript has done it's stuff,
 // Calendar.cofffee sets the '.calendar-loaded' class when it is done
