darken default link color a bit
Change-Id: I19c6a8eb941fe0d3ee29028ebc2f98d749fbaba2

--- a/app/stylesheets/_variables.sass
+++ b/app/stylesheets/_variables.sass
@@ -4,7 +4,7 @@ $min_main_width: 510px
 $max_main_width: 1100px
 $main_background_color: #fff
 
-$link_color: #4B92E9
+$link_color: #4183C4
 
 $identity-link-color: #fff
 $menu-border-color: #ccc
