--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -104,5 +104,5 @@ $(document).ready(function() {
     <%= render :partial => "shared/rubric_forms" %>
   <% end %>
   <%= render :partial => "shared/aligned_outcomes", :locals => {:asset => @assignment} %>
-  <%= render :partial => "shared/sequence_footer", :locals => {:asset => @assignment} if @assignment.context_module_tag %>
+  <%= render :partial => "shared/sequence_footer", :locals => {:asset => @assignment} if !@assignment.context_module_tags.empty? %>
 <% end %>
