fix css includes in profile pages
Change-Id: Id5c2f8d0c990d0527826110dff3518ca7a375521

--- a/app/stylesheets/profile/show.sass
+++ b/app/stylesheets/profile/show.sass
@@ -1,7 +1,4 @@
-@import 'centeredHeader'
-@import 'blue/variables'
-@import 'blue/mixins'
-@import mixins/misc.sass
+@import 'environment'
 
 /* this is the size of the default span2 */
 $profilePicWidth: $gridColumnWidth * 2 + $gridGutterWidth
