--- a/app/stylesheets/groups/profile.sass
+++ b/app/stylesheets/groups/profile.sass
@@ -1,6 +1,4 @@
-@import 'centeredHeader'
-@import 'blue/variables'
-@import 'blue/mixins'
+@import 'environment'
 
 /* this is the size of the default span2 */
 $profilePicWidth: $gridColumnWidth * 2 + $gridGutterWidth
