--- a/app/stylesheets/popup/main.scss
+++ b/app/stylesheets/popup/main.scss
@@ -6,6 +6,7 @@
 
 @import "blue/main";
 
-@import "g_util_buttons";
+@import "jqueryui/jquery.ui.all";
+@import "base/unified_buttons";
 
 @import "popup_base";
