--- a/app/views/shared/_wiki_sidebar.html.erb
+++ b/app/views/shared/_wiki_sidebar.html.erb
@@ -3,7 +3,7 @@
 <% load_wiki_sidebar %>
 <div id="editor_tabs" style="display: none;">
 
-  <h4 style="font-size: 1.3em; font-weight: bold; padding-left: 10px; margin-bottom: 0.3em; color: #666;"><%= t('headings.insert_content', %{Insert Content into the Page}) %></h4>
+  <h4><%= t('headings.insert_content', %{Insert Content into the Page}) %></h4>
   <ul>
     <li><a href="#editor_tabs_1"><%= t('tabs.collections', %{Collections}) %></a></li>
     <li><a href="#editor_tabs_2"><%= t('tabs.links', %{Links}) %></a></li>
