--- a/app/stylesheets/_environment.sass
+++ b/app/stylesheets/_environment.sass
@@ -1,10 +1,13 @@
 @import compass
-@import variables.sass
-@import mixins/misc.sass
-@import mixins/name_bubbles.sass
 
+//variables
+@import 'bootstrap/variables'
+@import 'jqueryui/variables'
 @import 'blue/variables'
-@import 'blue/mixins'
+@import 'variables'
 
-@import bootstrap/variables
-@import bootstrap/mixins
+//mixins
+@import 'bootstrap/mixins'
+@import 'mixins/misc'
+@import 'blue/mixins'
+@import 'mixins/name_bubbles'
