--- a/app/stylesheets/base/_layout.sass
+++ b/app/stylesheets/base/_layout.sass
@@ -3,7 +3,7 @@
 body, html
   height: 100%
 body
-  background: url("/images/blue/bg.jpg") center center
+  background-image: url("/images/blue/bg.jpg")
   min-width: $min_main_width
 
   &.no-headers
