--- a/app/stylesheets/jqueryui/_jquery.ui.dialog.scss
+++ b/app/stylesheets/jqueryui/_jquery.ui.dialog.scss
@@ -1,3 +1,4 @@
+// stock dialogs
 /*!
  * jQuery UI Dialog 1.8.21
  *
@@ -19,3 +20,28 @@
 .ui-dialog .ui-dialog-buttonpane button { margin: .5em .4em .5em 0; cursor: pointer; }
 .ui-dialog .ui-resizable-se { width: 14px; height: 14px; right: 3px; bottom: 3px; }
 .ui-draggable .ui-dialog-titlebar { cursor: move; }
+
+
+
+//our overrides
+.ui-dialog {
+  padding: 0;
+  .ui-dialog-buttonpane {
+    background-color: $formActionsBackground;
+    box-shadow: inset 0 1px 0 white;
+    border-top-color: #e5e5e5;
+  }
+  .ui-dialog-titlebar {
+    border-top: 0; border-left: 0; border-right: 0;
+    border-bottom-left-radius: 0; border-bottom-right-radius: 0;
+    font-weight: bold;
+    font-size: 14px;
+  }
+  .ui-dialog-titlebar-close {
+    span { background: url(/images/jqueryui/icon_sprite.png) 0 -16px no-repeat; }
+    &:hover, &:focus {
+      border-color: transparent;
+      span { background-position: -16px -16px; }
+    }
+  }
+}
