--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -10,14 +10,14 @@
     <% else %>
       <div class="rs-margin-lr rs-margin-top">
         <% if can_do(@quiz, @current_user, :manage) && @submitted_students && !@submitted_students.empty? %>
-          <a href="<%= context_url(@context, :context_quiz_statistics_url, @quiz.id) %>" class="button button-sidebar button-sidebar-wide"><%= image_tag "graph.png" %> <%= @quiz.survey? ? t('links.survey_statistics', "Survey Statistics") : t('links.quiz_statistics', "Quiz Statistics") %></a>
+          <a href="<%= context_url(@context, :context_quiz_statistics_url, @quiz.id) %>" class="button button-sidebar-wide"><%= image_tag "graph.png" %> <%= @quiz.survey? ? t('links.survey_statistics', "Survey Statistics") : t('links.quiz_statistics', "Quiz Statistics") %></a>
         <% end %>
         <% if can_do(@quiz, @current_user, :update) %>
-          <a href="<%= context_url(@context, :edit_context_quiz_url, @quiz) %>" class="button button-sidebar button-sidebar-wide"><%= image_tag "edit.png" %> <%= @quiz.survey? ? t('links.edit_this_survey', "Edit This Survey") : t('links.edit_this_quiz', "Edit This Quiz") %></a>
+          <a href="<%= context_url(@context, :edit_context_quiz_url, @quiz) %>" class="button button-sidebar-wide"><%= image_tag "edit.png" %> <%= @quiz.survey? ? t('links.edit_this_survey', "Edit This Survey") : t('links.edit_this_quiz', "Edit This Quiz") %></a>
           <% if can_do(@quiz, @current_user, :manage) %>
-            <a href="<%= context_url(@context, :context_quiz_moderate_url, @quiz.id) %>" class="button button-sidebar button-sidebar-wide"><%= image_tag "ball.png" %> <%= @quiz.survey? ? t('links.moderate_this_survey', "Moderate This Survey") : t('links.moderate_this_quiz', "Moderate This Quiz") %></a>
+            <a href="<%= context_url(@context, :context_quiz_moderate_url, @quiz.id) %>" class="button button-sidebar-wide"><%= image_tag "ball.png" %> <%= @quiz.survey? ? t('links.moderate_this_survey', "Moderate This Survey") : t('links.moderate_this_quiz', "Moderate This Quiz") %></a>
           <% end %>
-          <a href="<%= context_url(@context, :context_quiz_url, @quiz) %>" class="delete_quiz_link button button-sidebar button-sidebar-wide"><%= image_tag "delete.png" %> <%= @quiz.survey? ? t('links.delete_this_survey', "Delete This Survey") : t('links.delete_this_quiz', "Delete This Quiz") %></a>
+          <a href="<%= context_url(@context, :context_quiz_url, @quiz) %>" class="delete_quiz_link button button-sidebar-wide"><%= image_tag "delete.png" %> <%= @quiz.survey? ? t('links.delete_this_survey', "Delete This Survey") : t('links.delete_this_quiz', "Delete This Quiz") %></a>
           <% if @quiz.locked? %>
             <% form_for @quiz, :url => context_url(@context, :context_quiz_url, @quiz.id, :id => 'quiz_unlock_form') do |f| %>
               <%= hidden_field_tag 'quiz[locked]', false %>
@@ -32,21 +32,21 @@
                   <%= f.text_field :lock_at, :class => "datetime_field", :style => "width: 150px;", :value => datetime_string(@quiz.lock_at) %>
                 </label>
               </div>
-              <button id="let_students_take_this_quiz_button" class="button button-sidebar button-sidebar-wide" type="submit">
+              <button id="let_students_take_this_quiz_button" class="button button-sidebar-wide" type="submit">
                 <%= image_tag "unlock.png" %> <%= @quiz.survey? ? t('buttons.unlock_survey', "Let Students Take this Survey Now") : t('buttons.unlock_quiz', "Let Students Take this Quiz Now") %>
               </button>
             <% end %>
           <% else %>
             <% form_for @quiz, :url => context_url(@context, :context_quiz_url, @quiz.id) do |f| %>
               <%= hidden_field_tag 'quiz[locked]', true %>
-              <button class="button button-sidebar button-sidebar-wide" type="submit">
+              <button class="button button-sidebar-wide" type="submit">
                 <%= image_tag "lock.png" %> <%= @quiz.survey? ? t('buttons.lock_survey', "Lock this Survey Now") : t('buttons.lock_quiz', "Lock this Quiz Now") %>
               </button>
             <% end %>
           <% end %>
         <% elsif can_do(@quiz, @current_user, :review_grades) %>
           <% if @submitted_students && !@submitted_students.empty? %>
-            <a href="<%= context_url(@context, :context_quiz_statistics_url, @quiz.id) %>" class="button button-sidebar button-sidebar-wide"><%= image_tag "graph.png" %> <%= @quiz.survey? ? t('links.survey_statistics', "Survey Statistics") : t('links.quiz_statistics', "Quiz Statistics") %></a>
+            <a href="<%= context_url(@context, :context_quiz_statistics_url, @quiz.id) %>" class="button button-sidebar-wide"><%= image_tag "graph.png" %> <%= @quiz.survey? ? t('links.survey_statistics', "Survey Statistics") : t('links.quiz_statistics', "Quiz Statistics") %></a>
           <% end %>
           <a href="<%= context_url(@context, :context_quiz_read_only_url, @quiz.id) %>" class="button button-sidebar-wide"><%= image_tag "file.png" %> <%= t('links.see_full_quiz', "See Full Quiz") %></a>
         <% end %>
@@ -102,7 +102,7 @@
               <% end %>.
             </div>
             <% if can_do(@quiz, @current_user, :grade) || can_do(@quiz, @current_user, :update) %>
-              <a href="<%= context_url(@context, :edit_context_assignment_url, @quiz.assignment_id, :return_to => request.url) %>" class="button button-sidebar"><%= image_tag "edit.png" %> <%= t('links.edit_assignment_details', "Edit Assignment Details") %></a>
+              <a href="<%= context_url(@context, :edit_context_assignment_url, @quiz.assignment_id, :return_to => request.url) %>" class="button"><%= image_tag "edit.png" %> <%= t('links.edit_assignment_details', "Edit Assignment Details") %></a>
             <% end %>
           </div>
         <% end %>
