fix user and group profile styles that got ruined
Change-Id: Ieaee3f77c197e6875ba23c8cb0c31d7098fcbc00

--- a/app/stylesheets/groups/profile.sass
+++ b/app/stylesheets/groups/profile.sass
@@ -1,7 +1,2 @@
-@import 'environment'
-
-/* this is the size of the default span2 */
-$profilePicWidth: $gridColumnWidth * 2 + $gridGutterWidth
-
-.profile-pic
-  width: $profilePicWidth
+.profile-avatar-wrapper
+  margin-right: 30px
