lock header bg patter to left so it doesn't move on resize
Change-Id: I38120be32bf483a82d9487eb6e7b76acd6107249

--- a/app/stylesheets/base/_#header.sass
+++ b/app/stylesheets/base/_#header.sass
@@ -42,7 +42,7 @@
 #header
   position: relative
   z-index: 11 /* IE7 needs this o so the menu-item-drops get stuck above #main */
-  background: #6a7177 url("/images/canvas/header_bg.png") repeat-x bottom
+  background: #6a7177 url("/images/canvas/header_bg.png") repeat-x left bottom
   &.no-user
     background-position: 0 -25px
     min-height: 20px
