upgrade Uploadify to 3.1.1
fixes #8221

test plan: no user visible changes in behavior, so this is a regression
test. repeat this test plan once for s3 files and once for local
files:
  * verify file uploads on /courses/X/files and /dashboard/files
    * upload to other folders
    * upload multiple files
    * zip uploads
    * weird characters in filenames, duplicate filenames
  * verify other places we upload files like content imports and sis
    imports

Change-Id: I01b7805eb947097b250bf9be944a9347ecc4ff5e

--- a/app/views/layouts/facebook.html.erb
+++ b/app/views/layouts/facebook.html.erb
@@ -28,7 +28,7 @@
       paths: {
         common: 'compiled/bundles/common',
         jqueryui: 'vendor/jqueryui',
-        uploadify: '../flash/uploadify/jquery.uploadify.v2.1.4'
+        uploadify: '../flash/uploadify/jquery.uploadify-3.1.min'
       }
     };
   </script>
