--- a/app/stylesheets/base/_layout.sass
+++ b/app/stylesheets/base/_layout.sass
@@ -67,7 +67,7 @@ body
   #main
     margin-left: $left_side_width
   #header-inner
-    max-width: left_side_width + $max_main_width
+    max-width: $left_side_width + $max_main_width
 
 .with-right-side
   min-width: $right_side_width + $min_main_width
