makes inline equations vertically aligned to the middle
fixes #8904

test plan:
* enter a formula into any rich content editor (like an assignment
  description or something)
* make sure it is vertically aligned to the center with normal text
  before and after saving

Change-Id: I056e6ca9fc24c3114777cd7bf654ca59c0270a57
Reviewed-on: https://gerrit.instructure.com/11875
Reviewed-by: Jon Jensen <jon@instructure.com>
Tested-by: Jenkins <jenkins@instructure.com>

--- a/app/stylesheets/g_instructure.sass
+++ b/app/stylesheets/g_instructure.sass
@@ -1433,6 +1433,9 @@ form.user_content_post_form
   -moz-user-select: none
   cursor: pointer
 
+.equation_image
+  vertical-align: middle
+
 .dashboard-toggle
   display: block
   padding: 10px 0 0
