--- a/app/stylesheets/g_instructure.sass
+++ b/app/stylesheets/g_instructure.sass
@@ -174,10 +174,8 @@ body.no-headers #flash_message_wrapper
     :margin-bottom 20px
     .event-list-view-calendar
       float: right
-      font-size: 0.8em
-      +transparent
-    &:hover .event-list-view-calendar, &:focus .event-list-view-calendar
-      +opaque
+      font-size: 10px
+      font-weight: normal
 
   table.assignments
     :width 100%
