--- a/app/stylesheets/mini_calendar.sass
+++ b/app/stylesheets/mini_calendar.sass
@@ -16,6 +16,7 @@ $kyle-blue: #0081e3
     h2
       // override styles from default fullcalendar.css
       font-size: 14px
+      line-height: 35px
       font-weight: bold
       background-color: transparent
       margin: 0
